fixed the body alignment.. yikes.

--- a/styles.css
+++ b/styles.css
@@ -3586,15 +3586,7 @@ table.email-table {
     }
   }
 
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+
 .message-container {
     width: 70%;
     max-width: 800px;
